Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def # Define Driver class here"
+    "def Class(Driver):\n",
+    "    pass\n",
+    "# Define Driver class here"
    ]
   },
   {
