--- a/index.ipynb
+++ b/index.ipynb
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define Driver class here\n",
     "def Class(Driver):\n",
-    "    pass\n",
-    "# Define Driver class here"
+    "    pass\n"
    ]
   },
   {
@@ -66,7 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger class here "
+    "# Define Passenger class here \n",
+    "def Clas"
    ]
   },
   {
