--- a/index.ipynb
+++ b/index.ipynb
@@ -62,12 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define Passenger class here \n",
-    "def Clas"
+    "def Class(Passenger):\n",
+    "    pass"
    ]
   },
   {
