Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,6 +57,7 @@
    "source": [
     "# Define Driver class here\n",
     "def Class(Driver):\n",
+    "    greeting = \"Hey, how are you?\"\n",
     "    \n",
     "    pass\n"
    ]
