Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,7 @@
     "def Class(Driver):\n",
     "    greeting = \"Hey, how are you?\"\n",
     "    \n",
-    "    pass\n"
+    "    def "
    ]
   },
   {
