Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,8 @@
     "def Class(Driver):\n",
     "    greeting = \"Hey, how are you?\"\n",
     "    \n",
-    "    def "
+    "    def ask_for_destination():\n",
+    "        return \"Where would you like to go today?\""
    ]
   },
   {
