Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "# Define Driver class here\n",
     "def Class(Driver):\n",
-    "    greeting = \"Hey, how are you?\"\n",
+    "    dgreeting = \"Hey, how are you?\"\n",
     "    \n",
     "    def ask_for_destination():\n",
     "        return \"Where would you like to go today?\""
