--- a/index.ipynb
+++ b/index.ipynb
@@ -51,15 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define Driver class here\n",
     "def Class(Driver):\n",
-    "    dgreeting = \"Hey, how are you?\"\n",
     "    \n",
-    "    def ask_for_destination():\n",
+    "    def greeting(self):\n",
+    "        return \"Hey, how are you?\"\n",
+    "    \n",
+    "    def ask_for_destination(self):\n",
     "        return \"Where would you like to go today?\""
    ]
   },
