Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,12 @@
    "source": [
     "# Define Passenger class here \n",
     "def Class(Passenger):\n",
-    "    pass"
+    "    \n",
+    "    def reply_greeting(self):\n",
+    "        return \"Hey, how are you?\"\n",
+    "    \n",
+    "    def ask_for_destination(self):\n",
+    "        return \"Where would you like to go today?\""
    ]
   },
   {
