--- a/index.ipynb
+++ b/index.ipynb
@@ -67,18 +67,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-6-36e26342f4e2>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-36e26342f4e2>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    return \"Punch it! They're on our tail!'\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "# Define Passenger class here \n",
     "def Class(Passenger):\n",
     "    \n",
     "    def reply_greeting(self):\n",
-    "        return \"Hey, how are you?\"\n",
+    "        return \"I am doing well! Thanks for picking me up today!\"\n",
     "    \n",
-    "    def ask_for_destination(self):\n",
-    "        return \"Where would you like to go today?\""
+    "    def in_a_hurry(self):\n",
+    "        return \"Punch it! They're on our tail!'"
    ]
   },
   {
