Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "# Define Driver class here\n",
-    "def Class(Driver):\n",
+    "Class Driver(object):\n",
     "    \n",
     "    def greeting(self):\n",
     "        return \"Hey, how are you?\"\n",
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "# Define Passenger class here \n",
-    "def Class(Passenger):\n",
+    "Class Passenger):\n",
     "    \n",
     "    def reply_greeting(self):\n",
     "        return \"I am doing well! Thanks for picking me up today!\"\n",
