--- a/index.ipynb
+++ b/index.ipynb
@@ -159,13 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create Lion class\n",
     "class Lion(object):\n",
-    "    "
+    "    \n",
+    "    def lion_sound(self):\n",
+    "        return \"Roar\""
    ]
   },
   {
@@ -174,7 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Tiger class"
+    "# create Tiger class\n",
+    "class Tigr(oj)"
    ]
   },
   {
