Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -172,12 +172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create Tiger class\n",
-    "class Tigr(oj)"
+    "class Tiger(object):\n",
+    "    \n",
+    "    def tiger_sound(self):\n",
+    "        return 'Arr'"
    ]
   },
   {
@@ -186,7 +189,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Elephant class"
+    "# create Elephant class\n",
+    "class Elephant(object):"
    ]
   },
   {
