Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,10 @@
    "outputs": [],
    "source": [
     "# create Elephant class\n",
-    "class Elephant(object):"
+    "class Elephant(object):\n",
+    "    \n",
+    "    def elephant_sound(self):\n",
+    "        return \"Ooomph\""
    ]
   },
   {
@@ -206,9 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simba = None\n",
-    "tony = None\n",
-    "dumbo = None"
+    "simba = Lion()\n",
+    "tony = Tiger()\n",
+    "dumbo = "
    ]
   },
   {
