Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,7 @@
    "source": [
     "simba = Lion()\n",
     "tony = Tiger()\n",
-    "dumbo = "
+    "dumbo = Elephant()"
    ]
   },
   {
@@ -227,7 +227,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zoo = None"
+    "zoo = []\n",
+    "zoo.append(simba)"
    ]
   },
   {
