Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,13 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "zoo = []\n",
     "zoo.append(simba)\n",
-    "zoo.append(tony)"
+    "zoo.append(tony)\n",
+    "zoo.append(dumbo)"
    ]
   },
   {
@@ -244,7 +245,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list(map(lambda i: zoo))"
+   ]
   },
   {
    "cell_type": "markdown",
