Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,40 +159,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create Lion class\n",
     "class Lion(object):\n",
     "    \n",
-    "    def lion_sound(self):\n",
+    "    def speak(self):\n",
     "        return \"Roar\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create Tiger class\n",
     "class Tiger(object):\n",
     "    \n",
-    "    def tiger_sound(self):\n",
+    "    def speak(self):\n",
     "        return 'Arr'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create Elephant class\n",
     "class Elephant(object):\n",
     "    \n",
-    "    def elephant_sound(self):\n",
+    "    def speak(self):\n",
     "        return \"Ooomph\""
    ]
   },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,11 +242,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Roar', 'Arr', 'Ooomph']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list(map(lambda i: zoo))"
+    "list(map(lambda i: i.speak(), zoo))"
    ]
   },
   {
